# rl-golf

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: train_swing.ipynb
src/rl_golf/: body.py  swing_env.py  train.py  viz.py
